Implement register form

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -17,7 +17,11 @@
         </a>
       }
     </mat-nav-list>
+    <div class="sidenav__user-section">
+      <user-section class="sidenav__user-section-inner"></user-section>
+    </div>
   </mat-sidenav>
+
   <mat-sidenav-content>
     <mat-toolbar>
       @if (isHandset$ | async) {
