--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -14,6 +14,10 @@
   z-index: 1;
 }
 
+.sidenav .mat-drawer-inner-container {
+  overflow: hidden !important;
+}
+
 mat-sidenav-content {
   padding-right: 16px;
 }
@@ -40,3 +44,15 @@ mat-sidenav-content {
     }
   }
 }
+
+.nav-list {
+  height: 35vh;
+}
+
+.sidenav__user-section {
+  position: absolute;
+  bottom: 0;
+  width: 8vw;
+  margin-bottom: 5px;
+}
+
