--- a/src/app/components/user-section/user-section.component.html
+++ b/src/app/components/user-section/user-section.component.html
@@ -1,9 +1,9 @@
-<div class="user-section">
+<div *transloco="let t; prefix: 'userSection'" class="user-section">
   <button (click)="this.displaySignUpModal()" class="user-section__button">
-    <mat-icon aria-hidden="false" aria-label="Sign up" fontIcon="account_circle"></mat-icon>
+    <mat-icon aria-hidden="false" fontIcon="account_circle"></mat-icon>
   </button>
   <button (click)="this.displayChangeLanguageModal()" class="user-section__button">
-    <mat-icon aria-hidden="false" aria-label="Change language" fontIcon="language"></mat-icon>
+    <mat-icon aria-hidden="false" fontIcon="language"></mat-icon>
   </button>
 </div>
 
