--- a/src/app/components/user-section/user-section.component.html
+++ b/src/app/components/user-section/user-section.component.html
@@ -1,6 +1,13 @@
 <div *transloco="let t; prefix: 'userSection'" class="user-section">
-  <button (click)="this.displaySignUpModal()" class="user-section__button">
+  <button (click)="this.displaySignUpModal()"
+          *ngIf="this.userRoles.includes(UserRole.ROLE_GUEST)"
+          class="user-section__button">
     <mat-icon aria-hidden="false" fontIcon="account_circle"></mat-icon>
+  </button>
+  <button (click)="this.doLogout()"
+          *ngIf="!this.userRoles.includes(UserRole.ROLE_GUEST)"
+          class="user-section__button">
+    <mat-icon aria-hidden="false" fontIcon="logout"></mat-icon>
   </button>
   <button (click)="this.displayChangeLanguageModal()" class="user-section__button">
     <mat-icon aria-hidden="false" fontIcon="language"></mat-icon>
