--- a/src/app/components/user-section/user-section-login/user-section-login.component.html
+++ b/src/app/components/user-section/user-section-login/user-section-login.component.html
@@ -1,4 +1,4 @@
-<div *transloco="let t; prefix: 'login'">
+<div (keydown.enter)="onLoginClick()" (keydown.escape)="onCancelClick()" *transloco="let t; prefix: 'login'">
   <h2 mat-dialog-title>{{ t('welcome') }}</h2>
   <mat-dialog-content>
     <div class="row">
