Implement error catch system

--- a/src/app/components/user-section/user-section-login/user-section-login.component.html
+++ b/src/app/components/user-section/user-section-login/user-section-login.component.html
@@ -13,6 +13,9 @@
         <input [(ngModel)]="this.formData.password" matInput type="password"/>
       </mat-form-field>
     </div>
+    <div *ngIf="this.isLoginError" class="row">
+      <mat-error>{{ t('error') }}</mat-error>
+    </div>
   </mat-dialog-content>
   <mat-dialog-actions>
     <button (click)="onLoginClick()" mat-button>{{ t('login') }}</button>
