--- a/src/app/components/user-section/user-section-login/user-section-login.component.html
+++ b/src/app/components/user-section/user-section-login/user-section-login.component.html
@@ -1,20 +1,23 @@
-<div (keydown.enter)="onLoginClick()" (keydown.escape)="onCancelClick()" *transloco="let t; prefix: 'login'">
+<div (keydown.enter)="onLoginClick()"
+     (keydown.escape)="onCancelClick()"
+     *transloco="let t; prefix: 'login'"
+     class="user_section_login_container">
   <h2 mat-dialog-title>{{ t('welcome') }}</h2>
   <mat-dialog-content>
     <div class="row">
-      <mat-form-field>
+      <mat-form-field class="row__form-field">
         <mat-label *transloco="let t; prefix: 'common'">{{ t('username') }}</mat-label>
         <input [(ngModel)]="this.formData.username" matInput/>
       </mat-form-field>
     </div>
     <div class="row">
-      <mat-form-field>
+      <mat-form-field class="row__form-field">
         <mat-label>{{ t('password') }}</mat-label>
         <input [(ngModel)]="this.formData.password" matInput type="password"/>
       </mat-form-field>
     </div>
-    <div *ngIf="this.isLoginError" class="row">
-      <mat-error>{{ t('error') }}</mat-error>
+    <div class="row error-row">
+      <mat-error *ngIf="this.isLoginError">{{ t('error') }}</mat-error>
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
