--- a/src/app/components/raise-dataset/form1/raise-dataset-form-1.component.html
+++ b/src/app/components/raise-dataset/form1/raise-dataset-form-1.component.html
@@ -1,30 +1,15 @@
 <div [formGroup]="parentGroup!">
   <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>Shipping Information</mat-card-title>
+      <mat-card-title>Dataset information</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <input formControlName="company" matInput placeholder="Company">
-          </mat-form-field>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input formControlName="firstName" matInput placeholder="First name">
-            @if (this.parentGroup!.controls['firstName'].hasError('required')) {
-              <mat-error>First name is <strong>required</strong></mat-error>
-            }
-          </mat-form-field>
-        </div>
-        <div class="col">
-          <mat-form-field class="full-width">
-            <input formControlName="lastName" matInput placeholder="Last name">
-            @if (this.parentGroup!.controls['lastName'].hasError('required')) {
-              <mat-error>Last name is <strong>required</strong></mat-error>
+            <input formControlName="name" matInput placeholder="Dataset name">
+            @if (this.parentGroup!.controls['name'].hasError('required')) {
+            <mat-error>Name is <strong>required</strong></mat-error>
             }
           </mat-form-field>
         </div>
@@ -32,31 +17,31 @@
       <div class="row">
         <div class="col">
           <mat-form-field class="full-width">
-            <textarea formControlName="address" matInput placeholder="Address"></textarea>
-            @if (this.parentGroup!.controls['address'].hasError('required')) {
-              <mat-error>Address is <strong>required</strong></mat-error>
+            <input formControlName="author" matInput placeholder="Author name">
+            <mat-hint>How do you want to appear as author of this dataset?</mat-hint>
+            @if (this.parentGroup!.controls['author'].hasError('required')) {
+            <mat-error>Author is <strong>required</strong></mat-error>
             }
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
+      <div>
         <div class="col">
           <mat-form-field class="full-width">
-            <input #postalCode formControlName="postalCode" matInput maxlength="5" placeholder="Postal Code"
-                   type="number">
-            <mat-hint align="end">{{ postalCode.value.length }} / 5</mat-hint>
+            <mat-form-field>
+              <mat-label>Creation date</mat-label>
+              <input [matDatepicker]="picker" class="date_input" formControlName="creationDate" matInput readonly>
+              <mat-datepicker-toggle [for]="picker" matIconSuffix></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <mat-hint>Specify the creation date of this dataset</mat-hint>
+            @if (this.parentGroup!.controls['creationDate'].hasError('required')) {
+            <mat-error>Creation date is <strong>required</strong></mat-error>
+            }
           </mat-form-field>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <mat-radio-group formControlName="shipping">
-            <mat-radio-button value="free">Free Shipping</mat-radio-button>
-            <mat-radio-button value="priority">Priority Shipping</mat-radio-button>
-            <mat-radio-button value="nextday">Next Day Shipping</mat-radio-button>
-          </mat-radio-group>
-        </div>
-      </div>
+
     </mat-card-content>
   </mat-card>
 </div>
