--- a/src/app/components/raise-dataset/raise-dataset.component.html
+++ b/src/app/components/raise-dataset/raise-dataset.component.html
@@ -14,7 +14,7 @@
       </div>
     </mat-step>
     <mat-step [stepControl]="addressForm" label="Step 3">
-      <p>You're welcome.</p>
+      <app-raise-dataset-form-2 [parentGroup]="addressForm"></app-raise-dataset-form-2>
     </mat-step>
   </mat-stepper>
 </form>
