Implement repository creation

--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -1,5 +1,5 @@
 <div *transloco="let t; prefix: 'register'">
-  <mat-card class="shipping-card">
+  <mat-card class="form-card">
     <mat-card-header>
       <mat-card-title>{{ t('signUp') }}</mat-card-title>
     </mat-card-header>
