--- a/src/app/components/repository/repository/repository.component.scss
+++ b/src/app/components/repository/repository/repository.component.scss
@@ -1,10 +1,10 @@
-.full-width {
-  width: 100%;
-}
-
 .form-card {
   min-width: 120px;
   margin: 20px auto;
+}
+
+.full-width {
+  width: 100%;
 }
 
 .mat-radio-button {
@@ -26,3 +26,6 @@
   margin-right: 0;
 }
 
+.toggleFormMode {
+  cursor: pointer;
+}
