--- a/src/app/components/raise-dataset/raise-dataset.component.html
+++ b/src/app/components/raise-dataset/raise-dataset.component.html
@@ -1,20 +1,34 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="addressForm" novalidate>
-  <mat-stepper linear="true">
-    <mat-step label="Step 1" state="number">
+<form (ngSubmit)="onSubmit()" *transloco="let t; prefix: 'raiseDataset'" [formGroup]="datasetForm" novalidate>
+  <mat-stepper #stepper linear="true">
+    <mat-step label="{{ t('introduction') }}" state="number">
       <app-raise-dataset-intro></app-raise-dataset-intro>
       <div>
-        <button mat-button matStepperNext type="button">Next</button>
+        <button mat-button matStepperNext type="button">{{ t('next_button') }}</button>
       </div>
     </mat-step>
-    <mat-step [stepControl]="addressForm" label="Step 2" state="edit">
-      <app-raise-dataset-form-1 [parentGroup]="addressForm"></app-raise-dataset-form-1>
+    <mat-step [stepControl]="datasetForm" label="{{ t('dataset') }}" state="edit">
+      <app-raise-dataset-form-1 [parentGroup]="datasetForm"></app-raise-dataset-form-1>
       <div>
-        <button mat-button matStepperPrevious type="button">Back</button>
-        <button mat-button matStepperNext type="button">Next</button>
+        <button mat-button matStepperPrevious type="button">{{ t('back_button') }}</button>
+        <button mat-button matStepperNext type="button">{{ t('next_button') }}</button>
       </div>
     </mat-step>
-    <mat-step [stepControl]="addressForm" label="Step 3">
-      <app-raise-dataset-form-2 [parentGroup]="addressForm"></app-raise-dataset-form-2>
+    <mat-step [stepControl]="repositoryForm" label="{{ t('repository') }}">
+      <app-raise-dataset-form-2 [parentGroup]="repositoryForm"></app-raise-dataset-form-2>
+      <div>
+        <button mat-button matStepperPrevious type="button">{{ t('back_button') }}</button>
+        <button (click)="this.onSubmit()" *ngIf="repositoryForm.valid" mat-button
+                type="button">{{ t('create_button') }}
+        </button>
+      </div>
+    </mat-step>
+    <mat-step label="{{ t('result') }}">
+      <div>
+        {{ t('congratulations_message') }}
+      </div>
+      <div>
+        <button (click)="this.onSubmit()" mat-button type="button">{{ t('dashboard_button') }}</button>
+      </div>
     </mat-step>
   </mat-stepper>
 </form>
