--- a/src/app/components/raise-dataset/intro/raise-dataset-intro.component.html
+++ b/src/app/components/raise-dataset/intro/raise-dataset-intro.component.html
@@ -1,3 +1,3 @@
-<div>
-  <header>Raise a dataset!</header>
+<div *transloco="let t; prefix: 'raiseDataset'">
+  <header>{{ t('intro_header') }}</header>
 </div>
