Removed double quotes

--- a/src/app/components/dataset-info/dataset-info.component.html
+++ b/src/app/components/dataset-info/dataset-info.component.html
@@ -65,7 +65,7 @@
             </table>
           </mat-card-content>
           <mat-card-actions class="actions">
-            <button color="primary" mat-raised-button type="submit">"{{ t('add_new_dataset_button') }}"</button>
+            <button color="primary" mat-raised-button type="submit">{{ t('add_new_dataset_button') }}</button>
           </mat-card-actions>
         </mat-card>
       </mat-grid-tile>
