--- a/src/app/components/repository/repository.component.html
+++ b/src/app/components/repository/repository.component.html
@@ -63,7 +63,7 @@
       </form>
     </mat-card-content>
     <mat-dialog-actions *ngIf="this.isAddNewRepositoryMode">
-      <button (click)="this.handleRepositoryCreation()"
+      <button (click)="this.handleRepositoryCreation()" type="button"
               *ngIf="this.newRepositoryForm.valid" mat-button>{{ t('createButton') }}
       </button>
     </mat-dialog-actions>
