--- a/src/app/components/repository/repository.component.html
+++ b/src/app/components/repository/repository.component.html
@@ -68,7 +68,7 @@
       </button>
     </mat-dialog-actions>
   </mat-card>
-  <div class="toggleFormMode">
+  <div class="cursor-pointer">
     <mat-label (click)="this.handleAddRepository()"
                *ngIf="!this.isAddNewRepositoryMode">{{ t('addRepositoryButton') }}
     </mat-label>
