--- a/src/app/components/dataset-info/dataset-info.component.html
+++ b/src/app/components/dataset-info/dataset-info.component.html
@@ -38,7 +38,7 @@
           </mat-card-content>
         </mat-card>
       </mat-grid-tile>
-      <mat-grid-tile [colspan]="1" [rowspan]="1">
+      <mat-grid-tile [colspan]="1" [rowspan]="1" *transloco="let t; prefix: 'instancesTable'">
         <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
