--- a/src/app/components/repository-info/repository-info.component.html
+++ b/src/app/components/repository-info/repository-info.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container" *transloco="let t; prefix: 'datasetInfo'">
+<div class="grid-container" *transloco="let t; prefix: 'repositoryInfo'">
   <h1 class="mat-h1">
     {{this.repository?.name}}
   </h1>
@@ -10,7 +10,7 @@
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
-            Description
+            {{ t('description') }}
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
@@ -18,7 +18,7 @@
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
-    <mat-grid-tile [colspan]="1" [rowspan]="1">
+    <mat-grid-tile [colspan]="1" [rowspan]="1" *transloco="let t; prefix: 'instancesTable'">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
